Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
August 20, 2023

Converted min/max pref vars to range vars, using the new 
Daylon::FRange type and its supporting global functions.

All arguments to IGameObject::Move should now be 'DeltaTime'.

Added secondary explosion texture atlas, 
makes enemy destruction more entertaining.

All military missions now use AddEnemySpawnInfo instead of 
having big, mostly duplicate code in MakeTargets.

Pressing Esc in the play arena transitions to mission picker 
instead of to main menu.

Renamed all references to tasks to use "task" nomenclature, 
including the name of the "event" code modules. "Event" 
is to mean notifications e.g. input events.

Mission class has a separate task list for enemy creation tasks, 
to make it easier for Mission::IsComplete to tell when 
no targets are pending creation.

Sprite uninstallation checks if widget is still valid, to prevent 
errors logged by Daylon::Uninstall. This happens when 
transitioning away from the play arena.

Started moving away from the "hostiles remaining" concept 
in CMilitaryMission, in favor of the more reliable 
checking of the current wave index and actually counting 
the current enemies list to see if any mission-critical 
targets remain.

Renamed HostilesRemaining to TargetsRemaining.

All mission classes have to define the MaxWaves member.

Renamed CEvent to CScheduledTask and CEventQueue to 
CScheduledTaskList.

Moved gamename.dat resource file to inline C++ code to avoid 
problem with packaged builds not including that "asset".

Several old preference items removed.

Lander descent/ascent rate ranged and grow faster with XP.
Lander appearance vertical range increased to upper half of arena.

Smart bomb resupply XP increased to 20,000.

Player ship input handling directly updates its 
navigation control state instead of using an 