@@ -2,10 +2,10 @@ Bug list for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-August 20, 2023
+August 22, 2023
 
 
-If starting on a non-humans mission (e.g. Yllabian dogfight), the next mission 
+FIXED: If starting on a non-humans mission (e.g. Yllabian dogfight), the next mission 
 will have the humans clustered instead of spread out.
 
 FIXED: Hovering landers would drop way down below terrain for the last line segment 
